feat: add endpoint to retrieve classes by professor and enhance user role initialization